--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.filho.filho">
-
+    <uses-permission android:name="android.permission.INTERNET"/>
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -12,18 +12,9 @@
         <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity
-            android:name=".PopularFragment"
-            android:label="@string/title_activity_popular_fragment"
-            android:theme="@style/AppTheme.NoActionBar" />
-        <activity
-            android:name=".OngoingFragment"
-            android:label="@string/title_activity_ongoing_fragment"
-            android:theme="@style/AppTheme.NoActionBar"></activity>
     </application>
 
 </manifest>
